--- a/js/whatsapp/index.html
+++ b/js/whatsapp/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <script src="WhatsappAPI.js"></script>
+    <script>window.whatsapp = init();</script>
     <title>Whatsapp API Playground</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="main.js"></script>
+    <script src="bot.js"></script>
 </head>
 <body>
 <div id="leftControls">
